kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: kiii
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: kiii
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 80
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: kiii
spec:
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
